tests/snapshots/ui_nav__filter_typing_12.snap
---
source: tests/ui_nav.rs
expression: "h.screen(100, 12)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ○ ● ○  · ○   ○  ○·    ○ ·  ● ·  ·    ○· ·●·○ · ○ ·  ·●  · ·○ ·  ·  ┊ ○ config.go  ○ src/
                                                                      ▲                    − 1× +

 on disk  ~1          │   ..                                   │ config.go · v5/5        ⇥ content
   ┄ 2 unchanged ┄    │ ◇ config.go                       96 B │ unchanged since Sep 20 20:35
▶Sep 27 08:52 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │   5  }
 Sep 20 20:35 ~1      │                                        │   6  // defaults
   ┄ 2 unchanged ┄    │   2 deleted · . to show                │   7  // timeouts
 filter: co█                                                    type to filter · ⏎ keep · esc clear
