tests/snapshots/ui_nav__find_jump_10.snap
---
source: tests/ui_nav.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ○ ○ ○  · ○   ○  ○·    ○ ·  ○ ·  ·    ○· ·○ ○   ○     ○     ○       ┊ ○ legacy.go  ○ src/
                                                   ▲                                       − 1× +

 on disk  ~1          │   ..                     ╭────────────────────────────────────────────────╮
   ┄ 2 unchanged ┄    │ ▸ api/                   │ Jumped to Sep 05 22:40, the last snapshot that │
 Sep 27 08:52 ~1      │ ▸ models/                │ has legacy.go                                  │
   ┄ 2 unchanged ┄    │ ◇ config.go              ╰────────────────────────────────────────────────╯
 Sep 20 20:35 ~1      │ ◇ legacy.go                       62 B │   2
   ┄ 2 unchanged ┄    │ ◇ main.go                         87 B │   3  // Deprecated: use server.go
 Sep 13 20:51 ~2      │ ◇ util.go                         94 B │   4  func serveOld() {}
   ┄ 1 unchanged ┄    │                                        │
 Sep 09 19:23 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Sep 06 18:03 +1~3−1  │                                        │
▶  ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   1 deleted · . to show                │
 NOR  Sep 05 22:40  f7eae1d9  unchanged since Sep 02                      Jul 14 09:00  4/6  ? help
