tests/snapshots/ui_nav__search_and_next.snap
---
source: tests/ui_nav.rs
expression: "h.screen(100, 14)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ○ ● ○  · ○   ○  ○·    ○ ·  ● ·  ·    ○· ·●·○ · ○ ·  ·●  · ·○ ·  ·  ┊ ○ config.go  ○ src/
                                                                      ▲                    − 1× +

 on disk  ~1          │   ..                                   │ config.go · v5/5        ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ unchanged since Sep 20 20:35
▶Sep 27 08:52 ~1      │ ▸ models/                              │
   ┄ 2 unchanged ┄    │ ◇ config.go                    96 B    │   5  }
 Sep 20 20:35 ~1      │ ◇ main.go                     108 B    │   6  // defaults
   ┄ 2 unchanged ┄    │ ◇ server.go                    42 B  ~ │   7  // timeouts
 Sep 13 20:51 ~2      │ ◇ util.go                     104 B    │   8  // listen address
   ┄ 1 unchanged ┄    │   2 deleted · . to show                │   9+ // tls
 /.go█                                             type to search this folder · ⏎ keep · esc cancel
