tests/snapshots/ui_nav__which_key_z_04.snap
---
source: tests/ui_nav.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              now
  ● ·   ·  ● ○ ○  · ●   ○  ○·    ● ·  ○ ·  ·    ●· ·●·● · ○ ·  ·○  · ·○ ·  ·  ┊ ● main.go  ○ src/
                                                      ▲                                    − 1× +

 now  ~1 unsaved      │   ..                                   │ main.go · v7/7 · 108 B  ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ changed here · + new line · − remo…
 Sep 27 08:52 ~1      │ ▸ models/                              │
   ┄ 2 unchanged ┄    │ ◇ config.go                    89 B    │   1  package main
 Sep 20 20:35 ~1      │ ◇ main.go                     108 B  ~ │   2
   ┄ 2 unchanged ┄    │ ◇ server.go                    30 B    │   3  func main() {
 Sep 13 20:51 ~2      │ ◇ util.go                      94 B    │   4    run()
   ┄ 1 unchanged ┄    │                                        │   5  }
▶Sep 09 19:23 ~1      │                                        │   6  // flags
   ┄ 1 unchanged ┄    │                                        │   7  // middleware
 Sep 06 18:03 +1~3−1  │                                        │   8  // feature flag
   ┄ 2 unchanged ┄    │                                        │   9  // signals
 Sep 02 20:16 ~1      │                                        │  10  // serve
   ┄ 2 unchanged ┄    │                                        │  11+ // shutdown
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │ ╭─ z ────────────────────────────╮
 Jul 26 11:57 ~1      │                                        │ │ zh   show / hide deleted       │
 Jul 24 12:16 ~1      │                                        │ │ zi   zoom timeline in          │
   ┄ 2 unchanged ┄    │                                        │ │ zo   zoom timeline out         │
 Jul 14 09:00 +7      │                                        │ ╰────────────────────────────────╯
                      │   2 deleted · . to show                │
 NOR  Sep 09 19:23  811fc3af  src/ ~1                                  z  Sep 09 19:23  4/6  ? help
